--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<link rel="stylesheet" type="text/css" href="tmp.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 	<script src="http://threejs.org/build/three.min.js"></script>
@@ -28,7 +28,7 @@
 	}
 	</script>
 
-	<script src="tmp.js"></script>
+	<script src="index.js"></script>
 
 </body>
 </html>
