--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-	<script src="http://threejs.org/build/three.min.js"></script>
-	<script src="http://threejs.org/examples/js/controls/OrbitControls.js"></script>
+	<script src="three.min.js"></script>
+	<script src="OrbitControls.js"></script>
 
 	<script id="vertex_shader" type="x-shader/x-vertex">
 	varying vec3 vNormal;
