refactoring by folders

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Title</title>
+	<title>Нейроморфный фотоприемник</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-	<script src="three.min.js"></script>
-	<script src="OrbitControls.js"></script>
+	<script src="libs/three.min.js"></script>
+	<script src="libs/OrbitControls.js"></script>
 
 	<script id="vertex_shader" type="x-shader/x-vertex">
 	varying vec3 vNormal;
